Fixed close button positioning on smaller windows

--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -22,9 +22,10 @@
       width: 27px;
       height: 27px;
       opacity: 1;
-      top: -15px;
-      right: -4px;
+      top: 13px;
+      right: 25px;
       position: absolute;
+      z-index: 1000;
 
       span {
         display: none;
@@ -45,6 +46,13 @@
         span {
           display: none;
         }
+      }
+    }
+
+    @media (max-width: 549px) {
+      button.close {
+        top: 15px;
+        right: 15px;
       }
     }
 
